infra/products-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
        - name: products-image
          image: fardinhakimi/products
          imagePullPolicy: Always
