infra/frontend-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dpl
spec:
  replicas: 5
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-image
          image: fardinhakimi/frontend
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - name: frontend-port 
      protocol: TCP
      port: 3000
      targetPort: 3000
