infra/frontend-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: frontend-loadbalancer-port 
      protocol: TCP
      port: 80
      targetPort: 3000
