infra/inventory-db-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-db-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-db
  template:
    metadata:
      labels:
        app: inventory-db
    spec:
      containers:
      - name: inventory-db-image
        image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-db-service
spec:
  selector:
    app: inventory-db
  ports:
  - name: inventory-db-port
    protocol: TCP
    port: 27017
    targetPort: 27017
