infra/inventory-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory-image
        image: fardinhakimi/inventory
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
  - name: inventory-port
    protocol: TCP
    port: 3000
    targetPort: 3000
