infra/query-dpl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-dpl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query-image
        image: fardinhakimi/query
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  ports:
  - name: query-port
    protocol: TCP
    port: 3000
    targetPort: 3000
