infra/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: inventory.app
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 3000
